--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: package
-          path: netbird.*.nupkg
+          path: netbird-client.*.nupkg
   test:
     name: Test netbird client
     needs: package
