--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -41,19 +41,19 @@ jobs:
           sed -i "s|\$version .*|\$version = '${{ steps.latest_netbird_release.outputs.value }}'|g" tools/chocolateyinstall.ps1
           sed -i "s/ checksum64 .*/ checksum64 = '${{ env.WIN64SHA }}'/g" tools/chocolateyinstall.ps1
           sed -i "s|version>.*<|version>${{ steps.latest_netbird_release.outputs.value }}<|g" netbird-client.nuspec
-      # - name: Create Pull Request
-      #   if: steps.get_current_version.outputs.info != steps.latest_netbird_release.outputs.value
-      #   uses: peter-evans/create-pull-request@v5
-      #   with:
-      #     token: ${{ secrets.PAT }}
-      #     commit-message: Updating MySQL ODBC driver to ${{ steps.latest_netbird_release.outputs.value }}
-      #     committer: GitHub <noreply@github.com>
-      #     author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-      #     signoff: false
-      #     base: master
-      #     branch: ${{ steps.latest_netbird_release.outputs.value }}
-      #     delete-branch: true
-      #     title: MySQL ODBC ${{ steps.latest_netbird_release.outputs.value }}
-      #     body: 'Updated MySQL ODBC driver to ${{ steps.latest_netbird_release.outputs.value }}'
-      #     labels: |
-      #       automated pr
+      - name: Create Pull Request
+        if: steps.get_current_version.outputs.info != steps.latest_netbird_release.outputs.value
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.PAT }}
+          commit-message: Bumping Netbird client version to ${{ steps.latest_netbird_release.outputs.value }}
+          committer: GitHub <noreply@github.com>
+          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          signoff: false
+          base: main
+          branch: ${{ steps.latest_netbird_release.outputs.value }}
+          delete-branch: true
+          title: Netbird client ${{ steps.latest_netbird_release.outputs.value }}
+          body: 'Bumped Netbird client version to ${{ steps.latest_netbird_release.outputs.value }}'
+          labels: |
+            auto-update
