--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -2,8 +2,8 @@ name: Automatically create PR on a new version
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: '0 8 * * *'
+  schedule:
+    - cron: '0 8 * * *'
 
 jobs:
   check_update:
@@ -60,5 +60,4 @@ jobs:
       - uses: reitermarkus/automerge@v2
         with:
           token: ${{ secrets.PAT }}
-          merge-method: rebase
           required-labels: automerge
