Update workflow_dispatch trigger in auto-update.yml and pull_request branch in release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,10 @@
 name: Build and push NetBird package to Chocolatey
 
 on:
+  workflow_dispatch:
   pull_request:
     branches:
-      - master
+      - main
     types:
       - closed
 
