Update iconUrl in netbird.nuspec

--- a/netbird.nuspec
+++ b/netbird.nuspec
@@ -8,7 +8,7 @@
     <title>NetBird</title>
     <authors>NetBird</authors>
     <projectUrl>https://netbird.io</projectUrl>
-    <iconUrl>https://cdn.jsdelivr.net/gh/bombergio/choco-netbird/netbird.png</iconUrl>
+    <iconUrl>https://avatars.githubusercontent.com/u/100464677?s=128</iconUrl>
     <copyright>2024 NetBird</copyright>
     <licenseUrl>https://netbird.io/terms</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
