--- a/netbird.nuspec
+++ b/netbird.nuspec
@@ -17,6 +17,7 @@
     <tags>netbird wireguard vpn mesh p2p</tags>
     <summary>NetBird</summary>
     <description>NetBird combines a configuration-free peer-to-peer private network and a centralized access control system in a single platform, making it easy to create secure private networks for your organization or home.</description>
+    <releaseNotes>https://github.com/netbirdio/netbird/releases</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
