--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ on:
     types:
       - closed
 
+permissions:
+  contents: write
+
 jobs:
   pack:
     runs-on: windows-latest
@@ -16,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Get branch name
         id: branch-name
-        uses: tj-actions/branch-names@v4.9
+        uses: tj-actions/branch-names@v8
       - name: Choco pack
         uses: crazy-max/ghaction-chocolatey@v3
         with:
