--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -3,6 +3,7 @@ name: Automatically create PR on a new version
 on:
   schedule:
     - cron: '0 8 * * *'
+  workflow_dispatch:
 
 jobs:
   check_update:
