--- a/.github/workflows/publish-winget.yml
+++ b/.github/workflows/publish-winget.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Netbird version to publish (e.g., 0.59.7)'
+        description: 'Netbird version to publish (e.g., 0.59.8)'
         required: true
         type: string
 
@@ -18,23 +18,25 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up WingetCreate
+        shell: pwsh
         run: |
           Invoke-WebRequest https://aka.ms/wingetcreate/latest -OutFile wingetcreate.exe
 
       - name: Determine version
         id: version
+        shell: pwsh
         run: |
           if ("${{ github.event_name }}" -eq "workflow_dispatch") {
             $version = "${{ github.event.inputs.version }}"
           } else {
-            # Extract version from release tag (remove 'v' prefix if present)
             $version = "${{ github.event.release.tag_name }}".TrimStart('v')
           }
-          echo "VERSION=$version" >> $env:GITHUB_ENV
-          echo "version=$version" >> $env:GITHUB_OUTPUT
+          "VERSION=$version" >> $env:GITHUB_ENV
+          "version=$version" >> $env:GITHUB_OUTPUT
 
-      - name: Fetch release info
+      - name: Fetch release info & collect installer URLs
         id: release_info
+        shell: pwsh
         env:
           GH_API: https://api.github.com
           WINGET_PAT: ${{ secrets.WINGET_PAT }}
@@ -42,45 +44,50 @@ jobs:
           $ErrorActionPreference = 'Stop'
 
           $headers = @{
-            Authorization         = "Bearer $env:WINGET_PAT"
-            "User-Agent"          = "netbird-winget-action"
-            Accept                = "application/vnd.github+json"
-            "X-GitHub-Api-Version"= "2022-11-28"
+            Authorization          = "Bearer $env:WINGET_PAT"
+            "User-Agent"           = "netbird-winget-action"
+            Accept                 = "application/vnd.github+json"
+            "X-GitHub-Api-Version" = "2022-11-28"
           }
 
           if ("${{ github.event_name }}" -eq "workflow_dispatch") {
-            # For manual dispatch, fetch release info from GitHub API
             $release = Invoke-RestMethod -Headers $headers -Uri "$env:GH_API/repos/netbirdio/netbird/releases/tags/v${{ env.VERSION }}"
           } else {
-            # For release event, use the current release
             $release = Invoke-RestMethod -Headers $headers -Uri "${{ github.event.release.url }}"
           }
 
-          $urls = @(
-            ($assets | Where-Object { $_.name -like "*windows_amd64.msi" } | Select-Object -ExpandProperty browser_download_url -First 1),
-            ($assets | Where-Object { $_.name -like "*windows_amd64.exe" } | Select-Object -ExpandProperty browser_download_url -First 1),
-            ($assets | Where-Object { $_.name -like "*windows_arm64.msi" } | Select-Object -ExpandProperty browser_download_url -First 1),
-            ($assets | Where-Object { $_.name -like "*windows_arm64.exe" } | Select-Object -ExpandProperty browser_download_url -First 1)
-          ) | Where-Object { $_ }
-
-          if (-not $urls -or $urls.Count -eq 0) {
-            throw "No Windows installers found in v${{ env.VERSION }}."
+          # IMPORTANT: set $assets
+          $assets = $release.assets
+          if (-not $assets) {
+            throw "Release v${{ env.VERSION }} has no assets (is the tag correct and the build finished?)."
           }
 
-          # Pick a primary (x64 MSI) for consumers that expect a single URL
-          $primary = $urls | Where-Object { $_ -like "*.msi" -and $_ -match "amd64" } | Select-Object -First 1
-          if (-not $primary) { $primary = $urls[0] }
+          # Collect MSI & EXE installers for x64 and arm64
+          $msi_x64 = $assets | Where-Object { $_.name -like "*windows_amd64.msi" } | Select-Object -ExpandProperty browser_download_url -First 1
+          $exe_x64 = $assets | Where-Object { $_.name -like "*windows_amd64.exe" } | Select-Object -ExpandProperty browser_download_url -First 1
+          $msi_arm = $assets | Where-Object { $_.name -like "*windows_arm64.msi" } | Select-Object -ExpandProperty browser_download_url -First 1
+          $exe_arm = $assets | Where-Object { $_.name -like "*windows_arm64.exe" } | Select-Object -ExpandProperty browser_download_url -First 1
 
-          # Output: single-line
-          "installer_url=$primary" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          # At least one installer must exist
+          $any = @($msi_x64, $exe_x64, $msi_arm, $exe_arm) | Where-Object { $_ }
+          if (-not $any -or $any.Count -eq 0) {
+            throw "No Windows installers (MSI/EXE) found in v${{ env.VERSION }}."
+          }
 
-          # Output: multiline list of all installer URLs
-          $delimUrls = "EOF_$([Guid]::NewGuid().ToString('N'))"
-          Add-Content $env:GITHUB_OUTPUT "installer_urls<<$delimUrls"
-          $urls | ForEach-Object { Add-Content $env:GITHUB_OUTPUT $_ }
-          Add-Content $env:GITHUB_OUTPUT $delimUrls
+          # Qualify with architecture to help WingetCreate match correctly
+          # (WingetCreate also matches by installer type automatically)
+          $qualified = @()
+          if ($msi_x64) { $qualified += "$msi_x64|x64" }
+          if ($exe_x64) { $qualified += "$exe_x64|x64" }
+          if ($msi_arm) { $qualified += "$msi_arm|arm64" }
+          if ($exe_arm) { $qualified += "$exe_arm|arm64" }
 
-          # Output: release notes (multiline; normalize to LF)
+          # Persist for next step; also expose a primary for logs
+          Set-Content -Path installer_urls.txt -Value ($qualified -join "`n")
+          "installer_urls_file=installer_urls.txt" >> $env:GITHUB_OUTPUT
+          "installer_url=$($any[0])"               >> $env:GITHUB_OUTPUT
+
+          # (Optional) release notes, normalized to LF
           $notes = ($release.body ?? "") -replace "`r",""
           $delimNotes = "EOF_$([Guid]::NewGuid().ToString('N'))"
           Add-Content $env:GITHUB_OUTPUT "release_notes<<$delimNotes"
@@ -88,18 +95,25 @@ jobs:
           Add-Content $env:GITHUB_OUTPUT $delimNotes
 
       - name: Update Winget Manifest
+        shell: pwsh
+        env:
+          WINGET_PAT: ${{ secrets.WINGET_PAT }}
         run: |
-          Write-Host "Updating Winget manifest for Netbird version ${{ env.VERSION }}"
-          Write-Host "Installer URL: ${{ steps.release_info.outputs.installer_url }}"
-          
-          # Use wingetcreate to update and submit the manifest
+          Write-Host "Updating Winget manifest for Netbird ${{ env.VERSION }}"
+          Write-Host "Example installer: ${{ steps.release_info.outputs.installer_url }}"
+
+          $urls = Get-Content "${{ steps.release_info.outputs.installer_urls_file }}" | Where-Object { $_.Trim() }
+          if (-not $urls) { throw "No installer URLs to submit." }
+
+          # Pass ALL MSI+EXE installers to match the existing multi-installer manifest
           .\wingetcreate.exe update Netbird.Netbird `
-            --version ${{ env.VERSION }} `
-            --urls ${{ steps.release_info.outputs.installer_url }} `
+            --version $env:VERSION `
+            --urls $urls `
             --submit `
-            --token ${{ secrets.WINGET_PAT }} `
+            --token $env:WINGET_PAT
 
       - name: Verify submission
+        shell: pwsh
         run: |
           if ($LASTEXITCODE -eq 0) {
             Write-Host "✅ Successfully submitted Winget manifest update for Netbird ${{ env.VERSION }}"
